# CCTV_Analysis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TASKS.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_web.sh
.streamlit/: config.toml
docs/: TUNING.md  dependency-map.md  failure-patterns.md  features.md  project-brief.md  project-state.md  walkthrough.md
src/: config.py  detect.py  ingest.py  motion.py  pipeline.py  store.py  tune.py
ui/: app.py
